I  have completed: -The models for users, new words and user word and their respective repositories -A user dto for incoming external user data -The translator service -The email sending service (Need to test) -The migration for the models to build the db schema

--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ EVs.env
 /LanguageProjectBackend/Properties/launchSettings.json
 /LanguageProjectBackend/Properties/serviceDependencies.json
 /LanguageProjectBackend/Properties/serviceDependencies.local.json
+/LanguageProjectBackend/LanguageProjectBackend.http
